--- a/index.html
+++ b/index.html
@@ -1215,11 +1215,10 @@ function showSayHi() {
   const overlay = document.getElementById("sayHiOverlay");
   const textEl = document.getElementById("typingText");
 
-  // Prevent spam clicks
   if (btn.classList.contains("loading")) return;
   btn.classList.add("loading");
 
-  // ⏰ Greeting by time + language
+  // ⏰ Greeting
   const hour = new Date().getHours();
   const lang = navigator.language || "en";
   const isMalayalam = lang.startsWith("ml");
@@ -1237,17 +1236,19 @@ function showSayHi() {
     else if (hour >= 17 && hour < 21) greeting = "Good evening 🌆 Hope you're well!";
   }
 
-  // Show overlay
-  overlay.classList.add("show");
+  // 🔊 AUDIO (must be immediate)
   playHiSound();
   vibrateHi();
 
+  // 🎭 UI
+  overlay.classList.add("show");
   if (textEl) textEl.textContent = greeting;
 
   setTimeout(() => {
     if (textEl) textEl.textContent = "Opening WhatsApp…";
-  }, 700);
+  }, 600);
 
+  // 📲 REDIRECT (iOS SAFE)
   setTimeout(() => {
     overlay.classList.remove("show");
     btn.classList.remove("loading");
@@ -1263,8 +1264,10 @@ function showSayHi() {
       ? `https://wa.me/${phone}?text=${message}`
       : `https://web.whatsapp.com/send?phone=${phone}&text=${message}`;
 
-    window.open(url, "_blank");
-  }, 1600);
+    // ✅ WORKS IN INSTAGRAM iOS
+    window.location.href = url;
+
+  }, 1200);
 }
 </script>
 <script>
@@ -1288,31 +1291,34 @@ function typeText(text, elementId, speed = 45) {
 }
 </script>
 <script>
+let audioCtx;
+
 function playHiSound() {
-  const ctx = new (window.AudioContext || window.webkitAudioContext)();
+  if (!audioCtx) {
+    audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+  }
 
-  const osc = ctx.createOscillator();
-  const gain = ctx.createGain();
+  if (audioCtx.state === "suspended") {
+    audioCtx.resume();
+  }
 
-  osc.type = "triangle";
+  const osc = audioCtx.createOscillator();
+  const gain = audioCtx.createGain();
 
-  osc.frequency.setValueAtTime(520, ctx.currentTime);
-  osc.frequency.exponentialRampToValueAtTime(
-    880,
-    ctx.currentTime + 0.18
-  );
+  osc.type = "sine";
+  osc.frequency.value = 660;
 
-  gain.gain.setValueAtTime(0.18, ctx.currentTime);
+  gain.gain.setValueAtTime(0.15, audioCtx.currentTime);
   gain.gain.exponentialRampToValueAtTime(
     0.001,
-    ctx.currentTime + 0.45
+    audioCtx.currentTime + 0.35
   );
 
   osc.connect(gain);
-  gain.connect(ctx.destination);
+  gain.connect(audioCtx.destination);
 
   osc.start();
-  osc.stop(ctx.currentTime + 0.45);
+  osc.stop(audioCtx.currentTime + 0.35);
 }
 </script>
 <script>
